--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,13 @@ dependencies {
     compile 'com.google.android.gms:play-services:10.2.0'
     compile 'com.thefinestartist:finestwebview:1.2.7'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.google.firebase:firebase-core:10.0.1'
+    compile 'com.google.firebase:firebase-messaging:10.0.1'
+    compile 'com.google.firebase:firebase-invites:10.0.1'
     testCompile 'junit:junit:4.12'
 }
+
+
+
+
+apply plugin: 'com.google.gms.google-services'
